--- a/markdown.css
+++ b/markdown.css
@@ -1,6 +1,6 @@
 
 
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,700i');
+/* @import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,700i'); */
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
@@ -71,7 +71,7 @@ body {
     background-color: #fff;
     color: #545454;
 
-    font-family: "Raleway", sans-serif;
+    font-family: "PT Serif", sans-serif;
     text-rendering: optimizeLegibility;
 
     max-width: 46em;
@@ -82,7 +82,7 @@ body {
 
 
 h1 {
-    font-family: "Raleway", sans-serif;
+    font-family: "PT Serif", sans-serif;
     font-weight: 700;
     color: #333;
     font-size: 1.6em;
@@ -91,7 +91,7 @@ h1 {
 }
 
 h2 {
-    font-family: "Raleway", sans-serif;
+    font-family: "PT Serif", sans-serif;
     font-weight: 600;
     color: #333;
     font-size: 1.3em;
@@ -101,7 +101,7 @@ h2 {
 }
 
 h3 {
-    font-family: "Raleway", sans-serif;
+    font-family: "PT Serif", sans-serif;
     font-weight: 600;
     color: #333;
     font-size: 1.15em;
@@ -111,7 +111,7 @@ h3 {
 }
 
 h4 {
-    font-family: "Raleway", sans-serif;
+    font-family: "PT Serif", sans-serif;
     font-weight: 500;
     color: #333;
     font-size: 1em;
@@ -129,12 +129,12 @@ p {
 
 
 b, strong {
-    font-family: "Raleway", sans-serif;
+    font-family: "PT Serif", sans-serif;
     font-weight: 700;
 }
 
 i, em {
-    font-family: "Raleway", sans-serif;
+    font-family: "PT Serif", sans-serif;
     font-style: italic;
 }
 
